[package]
name = "git-recent-rs"
version = "0.1.0"
authors = ["Yung Siang Liau <liauys@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = { version="0.13.5" }
tui = "0.9.4"
termion = "1.5"
chrono = "0.4"
chrono-humanize = "0.0.11"

[[bin]]
name = "git-recent"
path = "src/main.rs"
