[package]
name = "git-checkout-recent"
version = "0.1.0"
authors = ["Yung Siang Liau <liauys@gmail.com>"]
license = "MIT"
description = "A tool to switch between recent local git branches easily"
readme = "README.md"
homepage = "http://github.com/YS-L/git-checkout-recent"
repository = "http://github.com/YS-L/git-checkout-recent"
exclude = ["images/*"]
keywords = ["cli", "git"]
categories = ["command-line-utilities"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = { version="0.13.5" }
tui = "0.9.4"
termion = "1.5"
chrono = "0.4"
chrono-humanize = "0.0.11"

[[bin]]
name = "git-checkout-recent"
path = "src/main.rs"
